# -6.4

./: CMakeLists.txt  README.md  initGcode.cpp  initGcode.h  main.cpp  myGocde.gcode  加进去.gcode  源.cpp  编织新设计5.26.vcxproj  编织新设计5.26.vcxproj.filters
Debug/: vc141.idb
Debug/编织新设计5.26.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
